--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Cache modules
         uses: actions/cache@v1
-        id: npm-cache
+        id: yarn-cache
         with:
           path: node_modules
-          key:${{ runner.os }}-npm-${{ hashFiles('**/npm.lock') }}
-          restore-keys: ${{ runner.os }}-npm-
+          key:${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -26,8 +26,8 @@ jobs:
         with:
           node-version: 12.x
       - name: Install dependencies
-        run: npm
+        run: yarn
       - name: Build
-        run: npm build
+        run: yarn build
       - name: Deploy
         run: aws s3 sync ./out s3://${{ secrets.S3_BUCKET }}
