--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,26 +8,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Cache modules
+
+      - name: Cache node modules
         uses: actions/cache@v1
-        id: yarn-cache
         with:
           path: node_modules
-          key:${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-yarn-
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
+ 
+      - name: Install Dependencies
+        run: npm install
+ 
+      - name: Build
+        run: npm run build
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Install dependencies
-        run: yarn
-      - name: Build
-        run: yarn build
+
       - name: Deploy
         run: aws s3 sync ./out s3://${{ secrets.S3_BUCKET }}
